Fixed x overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     font-family: "Quicksand", sans-serif;
     font-size: 62.5%;
     font-size: 10px;
+    overflow-x: hidden;
 }
 
 .header{
@@ -161,7 +162,7 @@ body {
  }
 
 h1{
-    font-size: 6rem;
+    font-size: 5rem;
     word-wrap: break-word;
 }
 h2{
